// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClosePaymentPlan connector mapStateToProps generates the correct props 1`] = `
Object {
  "errorText": Object {
    "closePlan": "There was a problem closing this payment plan, please try again.",
    "closePlanSelectRequired": "Please select a reason",
    "formError": "There was a problem adding this payment plan, please try again.",
    "installmentAmount": "Please enter an instalment amount",
    "installmentAmountNotNumber": "Please provide a number",
    "installmentFrequency": "Please select an instalment frequency",
    "installmentPeriod": "Please select an instalment period",
    "note": "Please enter some notes",
    "planType": "Please select a plan type",
    "startDate": "Please enter a start date",
  },
  "heading": "Close payment plan",
  "isLoading": false,
  "labels": Object {
    "attachFile": "Attach documents",
    "backButton": "Back",
    "closeButton": "Close Payment Plan",
    "closePlanDescription": "Are you sure you want to close this payment plan?",
    "closePlanDisclaimer": "Closing this payment plan will not automatically terminate the financial arrangement. Separate action required",
    "closePlanNo": "No",
    "closePlanYes": "Yes, Close the plan",
    "contactName": "Contact Name",
    "description": "Note",
    "detail": "Payment Plan type",
    "endDate": "End date",
    "endedBy": "Ended By",
    "every": "Every",
    "heading": "Payment Plan",
    "installment": "Instalment",
    "installmentAmount": "Instalment amount",
    "installmentFrequency": "Instalment frequency",
    "installmentPeriod": "Instalment period",
    "lastModifiedAt": "Last modified",
    "lastModifiedBy": "By",
    "newArrangementOption": "New Arrangement",
    "note": "Note",
    "paymentPlanType": "Payment plan type",
    "pleaseSelectAReason": "Please select a reason...",
    "raisedBy": "Raised by",
    "reasonSelect": "Select reason",
    "reasonText": "Enter a description",
    "startDate": "Start date",
    "status": "Status",
    "submitButton": "Create Payment Plan",
    "tenantDefaultOption": "Tenant Default",
  },
  "notification": Object {
    "closePaymentPlanLine2": "Customer notified by email, SMS and my account notification",
    "closePaymentPlanTitle": "Personal payment plan closed",
    "createPaymentPlanLine1": "{amount} Every {period} {schedule}(s) from {startDate}",
    "createPaymentPlanLine2": "Customer notified",
    "createPaymentPlanTitle": "Personal payment plan set up",
  },
}
`;

exports[`ClosePaymentPlan connector mapStateToProps mergeProps generates the correct props 1`] = `
Object {
  "errorText": Object {
    "closePlan": "There was a problem closing this payment plan, please try again.",
    "closePlanSelectRequired": "Please select a reason",
    "formError": "There was a problem adding this payment plan, please try again.",
    "installmentAmount": "Please enter an instalment amount",
    "installmentAmountNotNumber": "Please provide a number",
    "installmentFrequency": "Please select an instalment frequency",
    "installmentPeriod": "Please select an instalment period",
    "note": "Please enter some notes",
    "planType": "Please select a plan type",
    "startDate": "Please enter a start date",
  },
  "heading": "Close payment plan",
  "isLoading": false,
  "labels": Object {
    "attachFile": "Attach documents",
    "backButton": "Back",
    "closeButton": "Close Payment Plan",
    "closePlanDescription": "Are you sure you want to close this payment plan?",
    "closePlanDisclaimer": "Closing this payment plan will not automatically terminate the financial arrangement. Separate action required",
    "closePlanNo": "No",
    "closePlanYes": "Yes, Close the plan",
    "contactName": "Contact Name",
    "description": "Note",
    "detail": "Payment Plan type",
    "endDate": "End date",
    "endedBy": "Ended By",
    "every": "Every",
    "heading": "Payment Plan",
    "installment": "Instalment",
    "installmentAmount": "Instalment amount",
    "installmentFrequency": "Instalment frequency",
    "installmentPeriod": "Instalment period",
    "lastModifiedAt": "Last modified",
    "lastModifiedBy": "By",
    "newArrangementOption": "New Arrangement",
    "note": "Note",
    "paymentPlanType": "Payment plan type",
    "pleaseSelectAReason": "Please select a reason...",
    "raisedBy": "Raised by",
    "reasonSelect": "Select reason",
    "reasonText": "Enter a description",
    "startDate": "Start date",
    "status": "Status",
    "submitButton": "Create Payment Plan",
    "tenantDefaultOption": "Tenant Default",
  },
  "onCancel": [Function],
  "onClose": [Function],
  "redirectToDetailsPage": [Function],
}
`;

exports[`ClosePaymentPlan connector mapStateToProps mergeProps performs the correct actions for onClose 1`] = `
Object {
  "dataBddPrefix": "createPaymentPlan",
  "hideCloseButton": true,
  "icon": "success",
  "lines": Array [
    Object {
      "dataBdd": "message",
      "text": "Customer notified by email, SMS and my account notification",
    },
  ],
  "notificationType": "confirmation",
  "title": "Personal payment plan closed",
}
`;
